--- a/leads.html
+++ b/leads.html
@@ -125,7 +125,7 @@
                                 Prontos para Prospecção
                             </h1>
                             <p class="text-xl text-gray-300 leading-relaxed">
-                                Receba milhares de contatos de empresas brasileiras organizados por segmento, com telefone, email e dados completos. Pare de perder tempo prospectando e foque em vender.
+                                Receba milhares de contatos de empresas brasileiras organizados por segmento, com telefone, email e dados completos. Aplique o método com melhor custo x beneficio do mercado.
                             </p>
                         </div>
                         
@@ -151,7 +151,7 @@
                             </div>
                             <div class="flex items-center gap-2">
                                 <i class="fas fa-clock text-yellow-400"></i>
-                                <span>Entrega Imediata</span>
+                                <span>Entrega em até 24h</span>
                             </div>
                         </div>
                     </div>
@@ -171,20 +171,20 @@
                                 
                                 <div class="grid grid-cols-2 gap-4">
                                     <div class="bg-purple-dark/50 p-4 rounded-lg">
-                                        <div class="text-2xl font-bold text-purple-accent">Segmentado</div>
-                                        <div class="text-sm text-gray-400">Por região, atividade e porte</div>
+                                        <div class="text-2xl font-bold text-purple-accent">CAC</div>
+                                        <div class="text-sm text-gray-400">Custo por lead a menos de 1 centavo.</div>
                                     </div>
                                     <div class="bg-purple-dark/50 p-4 rounded-lg">
-                                        <div class="text-2xl font-bold text-green-400">Atualizado</div>
-                                        <div class="text-sm text-gray-400">Base de dados recente</div>
+                                        <div class="text-2xl font-bold text-green-400">ROI</div>
+                                        <div class="text-sm text-gray-400">Garantia de retorno ou seu dinheiro de volta.</div>
                                     </div>
                                     <div class="bg-purple-dark/50 p-4 rounded-lg">
-                                        <div class="text-2xl font-bold text-blue-400">Completo</div>
-                                        <div class="text-sm text-gray-400">Telefone, email e endereço</div>
+                                        <div class="text-2xl font-bold text-blue-400">Filtros</div>
+                                        <div class="text-sm text-gray-400">WhatsApp, email, região, atividade e muito mais.</div>
                                     </div>
                                     <div class="bg-purple-dark/50 p-4 rounded-lg">
-                                        <div class="text-2xl font-bold text-yellow-400">Pronto</div>
-                                        <div class="text-sm text-gray-400">Formato Excel organizado</div>
+                                        <div class="text-2xl font-bold text-yellow-400">Treinamento</div>
+                                        <div class="text-sm text-gray-400">Acesso a treinamento gratuito em video aula.</div>
                                     </div>
                                 </div>
                             </div>
@@ -263,45 +263,54 @@
                 </div>
 
                 <div class="grid lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
-                    <!-- Pacote Starter -->
+                    <!-- Pacote Iniciante -->
                     <div class="bg-purple-dark/50 rounded-2xl p-8 border border-purple-light/20 hover:border-purple-accent/50 transition-all duration-300 flex flex-col">
                         <div class="text-center mb-8">
-                            <h3 class="text-2xl font-bold mb-2">Starter (5.000 leads)</h3>
+                            <h3 class="text-2xl font-bold mb-2">Iniciante (+5.000 leads)</h3>
                             <div class="text-4xl font-bold text-purple-accent mb-2">R$ 97</div>
                             <div class="text-gray-400">Ideal para começar</div>
                         </div>
-                        <ul class="space-y-4 mb-8 flex-grow">
-                            <!-- Itens do pacote... -->
+                        <ul class="space-y-2 mb-8 flex-grow">
+                            <li><i class="fas fa-check text-green-400 text-lg mr-2"></i>Inclui até 5 tabelas em excel</li>
+                            <li><i class="fas fa-check text-green-400 text-lg mr-2"></i>20 colunas</li>
                         </ul>
-                        <a href="https://api.whatsapp.com/send/?phone=5519998205608&text=Tenho%20interesse%20no%20pacote%20Starter%20-%201.000%20leads%20por%20R%24%2097" target="_blank" class="block w-full text-center border-2 border-purple-accent text-purple-accent font-bold py-3 px-6 rounded-lg hover:bg-purple-accent hover:text-white transition-all duration-300">Solicitar Starter</a>
+                        <a href="https://api.whatsapp.com/send/?phone=5519998205608&text=Tenho%20interesse%20no%20pacote%20Iniciante%20-%205.000%20leads%20por%20R%24%2097" target="_blank" class="block w-full text-center border-2 border-purple-accent text-purple-accent font-bold py-3 px-6 rounded-lg hover:bg-purple-accent hover:text-white transition-all duration-300">Solicitar Iniciante</a>
                     </div>
-                    <!-- Pacote Professional -->
+                    <!-- Pacote Profissional -->
                     <div class="bg-purple-dark/50 rounded-2xl p-8 border-2 border-purple-accent relative transform scale-105 flex flex-col">
                         <div class="absolute -top-4 left-1/2 transform -translate-x-1/2">
                             <span class="bg-purple-accent text-white px-4 py-1 rounded-full text-sm font-bold">MAIS POPULAR</span>
                         </div>
                         <div class="text-center mb-8">
-                            <h3 class="text-2xl font-bold mb-2">Professional (15.000 leads)</h3>
+                            <h3 class="text-2xl font-bold mb-2">Profissional (+15.000 leads)</h3>
                             <div class="text-4xl font-bold text-purple-accent mb-2">R$ 197</div>
                             <div class="text-gray-400">Máximo resultado</div>
                         </div>
-                        <ul class="space-y-4 mb-8 flex-grow">
-                             <!-- Itens do pacote... -->
+                        <ul class="space-y-2 mb-8 flex-grow">
+                            <li><i class="fas fa-check text-green-400 text-lg mr-2"></i>Inclui até 10 tabelas em excel</li>
+                            <li><i class="fas fa-check text-green-400 text-lg mr-2"></i>30 colunas</li>
+                            <li><i class='fas fa-check text-green-400 text-lg mr-2'></i>Tabela única de leads com WhatsApp</li>
                         </ul>
-                        <a href="https://api.whatsapp.com/send/?phone=5519998205608&text=Tenho%20interesse%20no%20pacote%20Professional%20-%205.000%20leads%20por%20R%24%20197" target="_blank" class="block w-full text-center purple-gradient text-white font-bold py-3 px-6 rounded-lg hover-glow transition-all duration-300">Solicitar Professional</a>
+                        <a href="https://api.whatsapp.com/send/?phone=5519998205608&text=Tenho%20interesse%20no%20pacote%20Profissional%20-%2015.000%20leads%20por%20R%24%20197" target="_blank" class="block w-full text-center purple-gradient text-white font-bold py-3 px-6 rounded-lg hover-glow transition-all duration-300">Solicitar Profissional</a>
                     </div>
-                    <!-- Pacote Enterprise -->
+                    <!-- Pacote Time -->
                     <div class="bg-purple-dark/50 rounded-2xl p-8 border border-purple-light/20 hover:border-purple-accent/50 transition-all duration-300 flex flex-col">
                         <div class="text-center mb-8">
-                            <h3 class="text-2xl font-bold mb-2">Enterprise (50.000 leads)</h3>
+                            <h3 class="text-2xl font-bold mb-2">Time (+50.000 leads)</h3>
                             <div class="text-4xl font-bold text-purple-accent mb-2">R$ 397</div>
                             <div class="text-gray-400">Volume industrial</div>
                         </div>
-                        <ul class="space-y-4 mb-8 flex-grow">
-                             <!-- Itens do pacote... -->
+                        <ul class="space-y-2 mb-8 flex-grow">
+                            <li><i class="fas fa-check text-green-400 text-lg mr-2"></i>Inclui até 30 tabelas em excel</li>
+                            <li><i class="fas fa-check text-green-400 text-lg mr-2"></i>Todas colunas</li>
+                            <li><i class='fas fa-check text-green-400 text-lg mr-2'></i>Tabela única de leads com WhatsApp</li>
+                            <li><i class='fas fa-check text-green-400 text-lg mr-2'></i>Tabela única de leads com Email</li>
                         </ul>
-                        <a href="https://api.whatsapp.com/send/?phone=5519998205608&text=Tenho%20interesse%20no%20pacote%20Enterprise%20-%2015.000%20leads%20por%20R%24%20397" target="_blank" class="block w-full text-center border-2 border-purple-accent text-purple-accent font-bold py-3 px-6 rounded-lg hover:bg-purple-accent hover:text-white transition-all duration-300">Solicitar Enterprise</a>
+                        <a href="https://api.whatsapp.com/send/?phone=5519998205608&text=Tenho%20interesse%20no%20pacote%20Time%20-%2050.000%20leads%20por%20R%24%20397" target="_blank" class="block w-full text-center border-2 border-purple-accent text-purple-accent font-bold py-3 px-6 rounded-lg hover:bg-purple-accent hover:text-white transition-all duration-300">Solicitar Time</a>
                     </div>
+                </div>
+                <div class="text-center mt-8 text-gray-400 text-sm">
+                    (A quantidade de leads está sujeita a consulta de disponibilidade de acordo com o perfil do seu público alvo)
                 </div>
             </div>
         </section>
@@ -404,7 +413,7 @@
                             Em qual formato recebo os leads?
                             <i class="fas fa-chevron-down transform transition-transform"></i>
                         </summary>
-                        <p class="text-gray-300 mt-4">Você receberá uma planilha em formato Excel (.xlsx) ou CSV, organizada e pronta para ser importada em seu CRM ou ferramenta de prospecção.</p>
+                        <p class="text-gray-300 mt-4">Você receberá uma planilha em formato Excel (.xlsx), organizada e pronta para ser importada em seu CRM ou ferramenta de prospecção.</p>
                     </details>
                 </div>
             </div>
@@ -419,7 +428,7 @@
                     <div class="flex items-center mb-4">
                         <img src="arkerlogo1.png" alt="Arkersoft Logo" class="h-8 w-auto mr-2" style="display:inline;vertical-align:middle;">
                     </div>
-                    <p class="text-gray-400">Acelerando suas vendas com dados filtrados.</p>
+                    <p class="text-gray-400"></p>
                 </div>
                 <div>
                     <h4 class="font-bold text-lg mb-4">Links Rápidos</h4>
@@ -437,7 +446,7 @@
                         <li class="flex items-center"><i class="fas fa-envelope text-purple-accent mr-3"></i> arkersoft@arkersoft.com</li>
                     </ul>
                     <div class="flex space-x-4 mt-4">
-                        <a href="#" class="text-gray-400 hover:text-purple-accent"><i class="fab fa-instagram text-2xl"></i></a>
+                        <a href="#" class="text-gray-400 hover:text-purple-accent"><i class="fab fa-instagram text-2xl"></i> @Arkersoft</a>
                     </div>
                 </div>
             </div>
