--- a/leads.html
+++ b/leads.html
@@ -80,6 +80,16 @@
             100% { transform: scale(1); }
         }
     </style>
+            <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17306510316">
+        </script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'AW-17306510316');
+        </script>
 </head>
 <body class="bg-[#0a0a12] text-white">
     <!-- Efeito de Grade -->
