tag 2 google add

--- a/index.html
+++ b/index.html
@@ -302,6 +302,17 @@
             color: var(--primary-color);
         }
     </style>
+    
+    </head><!-- Event snippet for Compra conversion page -->
+        <script>
+        gtag('event', 'conversion', {
+            'send_to': 'AW-17306510316/bBw-CPr63-kaEOzHsbxA',
+            'value': 1.0,
+            'currency': 'BRL',
+            'transaction_id': ''
+        });
+        </script>
+
 </head>
 
 <body>
